# theseus

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  KANBAN.md  Makefile  README.md  ROADMAP.md  ROLLBACK.md  Theseus.pptx  docker-compose.yml  inspect_data.py  pyproject.toml  requirements.txt  train.py  train_river_uuv.py  train_rivers.py
cot/: emit.py  listener.py
demo/: README.md  _record.py  ais_pol.py  api.py  autoencoder.py  explainer.py  export_onnx.py  node_registry.py  retrain.py  run.sh  run_full.sh  show.py  stage_data.py  update_model.py
deploy/: Containerfile  Containerfile.dockerignore  README.md  UDS_DEPLOY.md  UDS_DEPLOY_EVIDENCE.md  ddil_beat.sh  demo_up.sh  entrypoint.sh  pre_stage.sh  preflight.sh  strike_group_down.sh  strike_group_up.sh
docs/: DAY2_PREP.md  DEMO_CHEATSHEET.md  DEMO_SCRIPT.md  DESTROYER_DEMO.md  HANDOFF.md  INDEX.md  INTEGRATION_SPEC.md  JUDGE_REVIEW.md  ONBOARDING.md  SNAPSHOT_EOD2.md  TEAM_LANES.md  WARHACKER_HANDOFF.md  WARHACKER_JUDGE_AUDIT.md
eval/: README.md  RESULTS.md  curate_oparea.py  curated_labels.csv  make_weak_labels.py  pyod_benchmark.py  score.py
fixtures/: EXPECTED.md  gen_detections.py  gen_smoke.py  policy_cannonico.json  scenario_apprentice.py  scenario_cannonico.py
fleet/: README.md  fleet_brain.py  mlflow_registry.py  run_miniature.sh  ship_node.py  signing.py
frontend/: README.md  app.py  cic.html
ingest/: README.md  cbm.py  cmapss.py  marinecadastre.py  metropt.py  ncmapss.py  ushant.py
lula/: assessment-results.yaml  component-definition.yaml
models/: benchmark.py  benchmark_results.json  (+2 more)
(+292 files in other folders)
