[project]
name = "referee"
version = "0.1.0"
description = "THE REFEREE — independent AI assurance & accountability for the multi-vendor mission (Warhacker event scaffold)"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
# The referee/record spine is stdlib-only; the fleet-learning + signing layers need these.
dependencies = ["numpy>=1.26", "cryptography>=42"]

[tool.setuptools]
packages = ["referee", "cot"]
